# ch-homegate

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  sample.http
.github/workflows/: tests.yaml
docs/: endpoints.http
examples/: api_usage.py
src/homegateapi/: client.py
src/homegater/: __init__.py  __main__.py  client.py  utils.py
tests/: conftest.py  test_client.py  test_utils.py
