[tool.poetry]
name = "homegater"
version = "0.1.0"
description = ""
authors = ["Charalampos (Babis) Moustafelos"]
readme = "README.md"

packages = [
    { include = "homegater", from = "src"}
]


[tool.poetry.dependencies]
requests = "^2.28.1"
python = "^3.11"
pytest-mock = "^3.14.0"
pytest = "^8.3.3"



[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "error",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pytest = "pytest:main"