[tool.poetry]
name = "homegater"
version = "0.1.0"
description = "A Python package to retrieve data from homegate.ch"
authors = ["Charalampos (Babis) Moustafelos"]
readme = "README.md"
keywords = ["homegate", "data", "api"]


packages = [
    { include = "homegater", from = "src"}
]

[tool.poetry.dependencies]
requests = "^2.28.1"
python = "^3.11"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.5"
pre-commit = "^4.1.0"
pytest-mock = "^3.14.0"
pytest = "^8.3.3"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "error",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pytest = "pytest:main"


[tool.ruff]
line-length = 88
fix = true
src = ["src"]
output-format = "full"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
]